[package]
authors = ["Maximilian Krüger <kruemaxi@gmail.com>"]
description = "short-time fourier transform"
documentation = "https://snd.github.io/stft/stft/index.html"
homepage = "https://github.com/snd/stft"
keywords = []
license = "MIT"
name = "stft"
readme = "README.md"
repository = "https://github.com/snd/stft.git"
version = "0.1.0"

[dependencies]
apodize = "0.1.1"
num = "0.1.29"
rustfft = "1.0.0"
strider = "0.1.1"
