[package]
authors = ["Maximilian Krüger <kruemaxi@gmail.com>"]
description = "computes the short-time fourier transform on streaming data"
documentation = "https://snd.github.io/stft/stft/index.html"
homepage = "https://github.com/snd/stft"
keywords = ["dsp", "fft", "stream", "data", "fourier"]
license = "MIT"
name = "stft"
readme = "README.md"
repository = "https://github.com/snd/stft.git"
version = "0.1.3"

[dependencies]
apodize = "0.1.1"
num = "0.1.29"
rustfft = "1.0.0"
strider = "0.1.1"
