[package]
authors = ["Maximilian Krüger <kruemaxi@gmail.com>"]
description = "computes the short-time fourier transform on streaming data"
documentation = "https://snd.github.io/stft/stft/index.html"
homepage = "https://github.com/snd/stft"
keywords = ["dsp", "fft", "stream", "data", "fourier"]
license = "MIT OR Apache-2.0"
name = "stft"
readme = "README.md"
repository = "https://github.com/snd/stft.git"
version = "0.2.0"

[dependencies]
apodize = "0.3.1"
num = "0.2.0"
rustfft = "3.0.1"
strider = "0.1.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "lib"
harness = false